client: Prevent trade processing cascade failures.
Release the trackedTrade write mutex during slow wallet calls
(Swap, Redeem, Refund) so incoming server messages are not blocked
for the duration of the RPC. Add context.Context as the first
parameter to Swap, Redeem, Refund and related wallet interface
methods to enable cancellation and timeouts. Limit active matches
per DEX connection to prevent wallet overload under high load.

Expose maxActiveMatches as a bisonw flag (--max-active-matches) and
config file option so operators can tune the limit per environment.
The default remains 48 for mainnet safety. Loadbot sets it to 12 to
avoid wallet RPC saturation during high-volume simnet testing.

--- a/client/cmd/bisonw/sample-dexc.conf
+++ b/client/cmd/bisonw/sample-dexc.conf
@@ -119,3 +119,11 @@
 ; Start HTTP profiler.
 ; Default is false.
 ; httpprof=true
+
+; ------------------------------------------------------------------------------
+; Trading settings
+; ------------------------------------------------------------------------------
+
+; Maximum number of active swap matches per DEX connection before deferring
+; new orders. Default is 48.
+; max-active-matches=48
