eth: Add Hardhat test suite for ETHSwapV1 contract.
38 tests covering core swap lifecycle (initiate, redeem, refund),
status/view functions, ERC-4337 account abstraction redeem via
EntryPoint.handleOps, all 9 validateUserOp error codes, and AA
security properties (reverting recipient drain protection, gas
constant adequacy, prepayment key uniqueness).

--- a/dex/networks/eth/contracts/v1/package.json
+++ b/dex/networks/eth/contracts/v1/package.json
@@ -4,14 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx hardhat test"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@account-abstraction/contracts": "^0.6.0",
-        "@openzeppelin/contracts": "^4.2.0",
+        "@account-abstraction/contracts": "^0.7.0",
+        "@openzeppelin/contracts": "^5.0.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.1",
         "hardhat": "^2.19.5"
